# mous3

./: README.md  pyproject.toml
src/mous3/: __main__.py
